# rnapolis-py

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  devenv.nix  distiller-methodology.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: auto_rebase.yml  docs.yml  publish-to-pypi.yml  python-app.yml
data/: motif_cif_files-2025-12-19.tar.zst
data/fasta/: test.fa
data/motifs/motif_cif_files/: HL_1G1X_001.cif  HL_1G1X_003.cif  HL_1G1X_004.cif  HL_1G1X_005.cif  HL_1HMH_001.cif  HL_1HMH_003.cif  HL_1JID_001.cif  HL_1KH6_002.cif  HL_1KXK_001.cif  HL_1L9A_001.cif  HL_1L9A_002.cif  HL_1M5K_003.cif  HL_1MFQ_001.cif  HL_1MFQ_002.cif  HL_1MZP_001.cif  HL_1NBS_007.cif  HL_1Q96_001.cif  HL_1RLG_002.cif  HL_1U6B_001.cif  HL_1U6B_004.cif  HL_1U9S_002.cif  HL_1U9S_004.cif  HL_1UN6_004.cif  HL_2BTE_003.cif  HL_2IL9_003.cif  HL_2NZ4_008.cif  HL_2OIU_001.cif  HL_2OIU_003.cif  HL_2R8S_001.cif  HL_2Z75_004.cif  HL_2ZZM_003.cif  HL_359D_001.cif  HL_3AGV_001.cif  HL_3AM1_002.cif  HL_3AM1_003.cif  HL_3CUL_001.cif  HL_3D0U_004.cif  HL_3E5C_001.cif  HL_3E5C_002.cif  HL_3IGI_003.cif  (+276 more)
data/secondary/: test.dbn
docs/: index.md
docs/api/: adapter.md  aligner.md  annotator.md  clashfinder.md  common.md  distiller.md  metareader.md  molecule_filter.md  motif_extractor.md  parser.md  parser_v2.md  rfam_folder.md  scorer.md  splitter.md  tertiary.md  tertiary_v2.md
jupyter/: preprocess-components.ipynb  pulp-benchmark.ipynb
notebooks/: Annotator.ipynb  Clashfinder_MolProbity.ipynb  Clashfinder_same_atom_name.ipynb  Distiller.ipynb  Metareader_resolution_method.ipynb  annotator.ipynb  clashfinder-molprobity.ipynb  clashfinder-same-atom-name.ipynb  distiller.ipynb  metareader-atom-site.ipynb  metareader-resolution-method.ipynb  pulp-benchmark.ipynb
notebooks/data/: component.cif
outputs/: distiller_exact_auto.txt
outputs/annotator/: 8af0.csv  8af0.json
scorer/: requirements.txt  result.csv  scorer.py  test_scorer.py
src/rnapolis/: __init__.py  adapter.py  aligner.py  annotator.py  annotator_ml.py  clashfinder.py  common.py  component_A.csv  component_C.csv  component_G.csv  component_U.csv  default_config.ini  distiller.py  facility_location.py  geometry.py  metareader.py  molecule_filter.py  motif_extractor.py  parser.py  parser_v2.py  quick_filter.py  rfam_folder.py  scorer.py  secondary.py  splitter.py  structure.py  tertiary.py  tertiary_v2.py  transformer.py  unifier.py  util.py  utils.py
src/rnapolis/adapters/: __init__.py  barnaba.py  bpnet.py  dnatco.py  dssr.py  fr3d.py  maxit.py  mc_annotate.py  rnaview.py
tests/: 184D-fr3d.txt  184D.cif  184D.csv  1A1T_1_B-rnaview.json  1A1T_1_B.cif  1A4D_1_A-B-basepair_detail.txt  1A4D_1_A-B-dssr.json  1A4D_1_A-B-input.cif.out  1A4D_1_A-B-input_basepair.json  1A4D_1_A-B-output.cif  1A4D_1_A-B.cif  1DFU_1_M-N.cif  1E7K_1_C.cif  1E7K_1_C_modified.cif  1EHZ.dbn  1ET4-A.bpseq  1ET4-A.dbn  1HMH_1_E.cif  1JJP.cif  1a9n.cif  1ehz-assembly-1.cif  2HY9.cif  4WTI_1_T-P.cif  4gqj-assembly1.cif  4qln.cif  5O60-A.dbn  5O60-A.hairpins  5O60-A.stems  5O60-A.strands  6EK0-L5-L8.bpseq  6FC9.cif  6INQ.cif  6RS3.cif  6g90_1.cif  8btk_B7.cif  GK000002.2-66269475-66272524.fa  LJAJ01000009.1-42413-42384.fa  RF03339.fa  conftest.py  test_adapter.py  (+15 more)
tests/dnatco/1EHZ/: 1ehz.csv
tests/dnatco/1ehz/: 1ehz.cif
