[build-system]
requires = ["uv_build>=0.9.30,<0.12.0"]
build-backend = "uv_build"

[project]
name = "RNApolis"
version = "0.16.7"
description = "A Python library containing RNA-related bioinformatics functions and classes"
authors = [{ name = "Tomasz Zok", email = "tomasz.zok@cs.put.poznan.pl" }]
readme = "README.md"
requires-python = ">=3.12,<4"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "appdirs",
    "apricot-select",
    "graphviz",
    "mmcif",
    "numpy",
    "ordered-set",
    "orjson",
    "pandas",
    "pulp",
    "pycircstat2",
    "requests",
    "scikit-learn",
    "scipy",
    "shapely",
    "tqdm",
    "viennarna",
]

[project.urls]
Homepage = "https://github.com/tzok/rnapolis-py"
Repository = "https://github.com/tzok/rnapolis-py"

[project.optional-dependencies]
faiss = ["faiss-cpu"]

[dependency-groups]
dev = [
    "pytest",
    "hypothesis",
    "notebook",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.uv]
default-groups = []

[project.scripts]
annotator = "rnapolis.annotator:main"
adapter = "rnapolis.adapter:main"
aligner = "rnapolis.aligner:main"
clashfinder = "rnapolis.clashfinder:main"
distiller = "rnapolis.distiller:main"
metareader = "rnapolis.metareader:main"
molecule-filter = "rnapolis.molecule_filter:main"
motif-extractor = "rnapolis.motif_extractor:main"
transformer = "rnapolis.transformer:main"
rfam-folder = "rnapolis.rfam_folder:main"
unifier = "rnapolis.unifier:main"
splitter = "rnapolis.splitter:main"
quick-filter = "rnapolis.quick_filter:main"
